# openclaw-desktop

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  gateway.rs  lib.rs  main.rs  setup.rs  tray.rs
ui/: app.js  index.html  setup.html  setup.js  style.css
